# openapi-specs/openapi.json
@@ -466,7 +466,11 @@
         "required": [
           "displayName",
           "email",
-          "password"
+          "password",
+          "gender",
+          "city",
+          "country",
+          "birthDay"
         ],
         "properties": {
           "displayName": {
@@ -481,6 +485,23 @@
           "password": {
             "type": "string",
             "minLength": 6
+          },
+          "gender": {
+            "type": "string",
+            "minLength": 1
+          },
+          "city": {
+            "type": "string",
+            "minLength": 1
+          },
+          "country": {
+            "type": "string",
+            "minLength": 1
+          },
+          "birthDay": {
+            "type": "string",
+            "format": "date",
+            "minLength": 1
           }
         }
       },
